Clear the screenshot model as we change resources

BUG: 448620